--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,13 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Risque&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap");
+
 nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  font-family: "Bungee Shade", cursive;
 }
 
 .navbuttons {
   font-size: 30px;
-  width: 150px;
+  width: 170px;
 }
 
 a {
@@ -15,7 +17,6 @@ a {
   color: red;
   padding: 10px;
   transition: background-color 1s;
-  font-family: "Risque", cursive;
   border-radius: 10%;
 }
 
