--- a/src/components/Store.css
+++ b/src/components/Store.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Oxanium&display=swap");
+
 .items {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
+  font-family: "Oxanium", cursive;
 }
